@@ -2,6 +2,7 @@ ovirt-host-deploy -- oVirt host deploy
 
 ????-??-?? - Version 1.2.3
 
+ * vdsm: support ibm_powerkvm distribution, rhbz#1131177.
 
 2014-06-22 - Version 1.2.2
 
